<resources>
    <string name="app_name">NavigationLesson1</string>
    <string name="merhabalar">Merhabalar,</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="neler_rendik">Neler öğrendik?</string>
    <string name="kotlin_temelleri">Kotlin temelleri</string>
    <string name="button">Button</string>
    <string name="collections">Collections</string>
    <string name="layout">Layout</string>
    <string name="life_cycle">Life Cycle</string>
    <string name="fragment">Fragment</string>
    <string name="navigation_compenent">Navigation Compenent</string>
</resources>